--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <div class="wrapper">
-        <section class="main">
-            <div class="main__content">
+        <section class="main __sections">
+            <div class="main__content -content">
                 <div class="main__subhead">
                     <h2>Become a host</h2>
                 </div>
@@ -26,8 +26,8 @@
                 </div>
             </div>
         </section>
-        <section class="next">
-            <div class="next__content">
+        <section class="next __sections">
+            <div class="next__content -content">
                 <div class="next__first">
                     <div class="next__title">
                         <h2>Your next chapter, made possible by <br>
@@ -47,8 +47,8 @@
                 </div>
             </div>
         </section>
-        <section class="feedback">
-            <div class="feedback__content">
+        <section class="feedback __sections">
+            <div class="feedback__content -content">
                 <div class="feedback__img">
                     <img src="https://a0.muscache.com/pictures/ca994156-41c9-47f2-93ac-de109e4beda0.jpg" alt="">
                 </div>
@@ -62,8 +62,8 @@
             </div>
             
         </section>
-        <section class="start">
-            <div class="start__content">
+        <section class="start __sections">
+            <div class="start__content -content">
                <div class="start__head">
                     <h2>become a host</h2>
                </div>
@@ -75,8 +75,8 @@
                </div>
             </div>
         </section>
-        <section class="works">
-            <div class="works__content">
+        <section class="works __sections">
+            <div class="works__content -content">
                 <div class="works__items">
                     <a class="works__item work">
                         <div class="works__img">
@@ -123,8 +123,8 @@
             </div>
             
         </section>
-        <section class="ask">
-            <div class="ask__content">
+        <section class="ask __sections">
+            <div class="ask__content -content">
                 <div class="ask__text">
                     <div class="ask__subhead">
                         <h2>have questions?</h2>
@@ -139,8 +139,8 @@
                 </div>
             </div>
         </section>
-        <section class="support">
-            <div class="support__content">
+        <section class="support __sections">
+            <div class="support__content -content">
                 <div class="support__row">
                     <div class="support__items">
                         <div class="support__item supp">
@@ -189,8 +189,8 @@
                 </div>
             </div>
         </section>
-        <section class="end">
-            <div class="end__content">
+        <section class="end __sections">
+            <div class="end__content -content">
                 <div class="end__hero">
                     <div class="end__head">
                         <h2>Start your hosting journey</h2>
@@ -236,7 +236,7 @@
     </div>
     <footer class="footer">
         <div class="footer__wrapper">
-            <div class="footer__content">
+            <div class="footer__content -content">
                 <section class="footer__support">
                     <div class="footer__support-head">
                         <h2>Support</h2>
